Bug Fix
*The curry recipe image was larger than its element and caused a layout issue. However, fixing this introduced a centering issue with the other, smaller recipe images. Hoping the next lesson introduced concepts to better center elements inside of containers to address the new issues.

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@
 
 .recipe-img {
     border: 1px solid black;
-    width: 600px;
+    width: 800px;
     margin: 0 auto 5px;
     padding: 0 25px;
 }
